--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="box"></div>
 </div>
 
-<div class="name">TESSY PERRY+</div>
+<div class="name">TESSY PERRY</div>
 <div class="mainbox"><img src="camera.jpeg" alt=""></div>
 
 
