--- a/index.html
+++ b/index.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TESSY PERRY</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
-  
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="main">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="main">
+      <header>
+        <div class="name">TESSY PERRY</div>
+      </header>
 
-<div class="boxcontain">
-<div class="box"></div>
-</div>
+      <main>
+        <div class="mainbox"><img src="camera.jpeg" alt="" /></div>
+        <div class="avatar"><img src="jewel-box.jpeg" alt="" /></div>
+      </main>
 
-<div class="name">TESSY PERRY</div>
-<div class="mainbox"><img src="camera.jpeg" alt=""></div>
+      <nav>
+        <ul class="links">
+          <li class="link"><a href="" class="active">HOME</a></li>
+          <li class="link"><a href="">GALLERY</a></li>
+          <li class="link"><a href="">ABOUT</a></li>
+          <li class="link"><a href="">CONTACT</a></li>
+        </ul>
+      </nav>
 
+      <div class="box"></div>
+    </div>
 
-<div class="avatar"><img src="jewel-box.jpeg" alt=""></div>
-
-<nav>
-    <ul class="links">
-        <li class="link"><a href="" class="active">HOME</a></li>
-        <li class="link"><a href="">ABOUT</a></li>
-        <li class="link"><a href="">GALLERY</a></li>
-        <li class="link"><a href="">CONTACT</a></li>
-    </ul>
-</nav>
-
-
-<div class="social">
-    <a href=""><i class="fab fa-facebook"></i></a>
-    <a href=""><i class="fab fa-instagram"></i></a>
-    <a href=""><i class="fab fa-twitter"></i></a>
-    <a href=""><i class="fab fa-email"></i></a>
-</div>
-
-</div>
-</body>
+    <div class="social">
+      <a href=""><i class="fa fa-facebook"></i></a>
+      <a href=""><i class="fa fa-instagram"></i></a>
+      <a href=""><i class="fa fa-twitter"></i></a>
+      <a href=""><i class="fa fa-github"></i></a>
+    </div>
+  </body>
 </html>
