--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </header>
 
       <main>
-        <div class="mainbox"><img src="camera.jpeg" alt="" /></div>
+        <div class="mainbox"><img src="perry.jpg" alt="" /></div>
         <div class="avatar"><img src="jewel-box.jpeg" alt="" /></div>
       </main>
 
