--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <main>
         <div class="mainbox"><img src="perry.jpg" alt="" /></div>
-        <div class="avatar"><img src="jewel-box.jpeg" alt="" /></div>
+        <div class="avatar"><img src="avatar.jpg" alt="" /></div>
       </main>
 
       <nav>
